kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defcoinapp
  namespace: deflationcoin
spec:
  selector:
    matchLabels:
      app: defcoinapp
  replicas: 1
  template:
    metadata:
      labels:
        app: defcoinapp
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-192.168.0.4
      imagePullSecrets:
        - name: deflationcoin-registry-cred
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: deflationcoin.ru/defcoinapp:1.0.148
          imagePullPolicy: IfNotPresent
          name: defcoinapp
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /app/node_modules
              name: node-modules
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
      volumes:
        - name: node-modules
          persistentVolumeClaim:
            claimName: node-modules-pvc
