kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: defcoinapp-service
  namespace: deflationcoin
spec:
  selector:
    app: defcoinapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
